# MineGit

./: .gitignore  Cargo.toml  LICENSE  README.md  diagram.drawio  todo!.md
mem/: sa-is.rs
src/: args.rs  cli.rs  committer.rs  diff.rs  diff_gen.rs  ignore_filter.rs  initializer.rs  main.rs  recover.rs  recover_test.rs  region.rs  savefiles.rs
src/delta/: diff.rs  diff_gen.rs  mca.rs  recover.rs  region.rs  snapshot.rs
src/future/: package.rs  snapshot.rs
src/mem/: q.rs
src/recover/: diff.rs  diff_gen.rs  recover.rs  snapshot.rs  test.rs
src/utils/: fs_utils.rs
